[package]
name = "twins"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lddr"
path = "src/bin/lddr.rs"

[lib]
name = "twins"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.*"
clap = { version = "3.1.6", features = ["derive"] }
goblin = "0.5.*"
id_tree = "1.8.0"
